A partially selected RTL text is placed at a wrong vertical position if it has a vertical initial advance https://bugs.webkit.org/show_bug.cgi?id=205990

Reviewed by Darin Adler.

Source/WebCore:

FontCascade::getGlyphsAndAdvancesForComplexText returned only X
position of the first glyph, but Y position.

Because GlyphBuffer is using glyph advances instead glyph
positions, it's not simple to get the first glyph position of the
part of a RTL texts.
FontCascade::getGlyphsAndAdvancesForComplexText is calculating the
X position of it by subtracting right side part width from the
total width. It should do same for Y position.

macOS and iOS ports don't use the code to draw selected texts.

Test: fast/text/initial-advance-selected-text.html

* platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::offsetForPosition):
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):
* platform/graphics/ComplexTextController.h: Replaced m_totalWidth with m_totalAdvance.
(WebCore::ComplexTextController::totalWidth const): Removed.
(WebCore::ComplexTextController::totalAdvance const): Added.
* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::glyphBufferForTextRun const): Changed the return type from float to FloatSize.
(WebCore::FontCascade::drawText const):
(WebCore::FontCascade::displayListForTextRun const):
(WebCore::FontCascade::getGlyphsAndAdvancesForComplexText const): Changed the return type from float to FloatSize.
(WebCore::FontCascade::drawGlyphBuffer const):
(WebCore::FontCascade::floatWidthForComplexText const):
(WebCore::FontCascade::adjustSelectionRectForComplexText const):
(WebCore::FontCascade::drawEmphasisMarksForComplexText const):
(WebCore::FontCascade::dashesForIntersectionsWithRect const):
* platform/graphics/FontCascade.h:
* platform/graphics/GlyphBuffer.h:
(WebCore::toFloatSize): Added.

Tools:

* TestWebKitAPI/Tests/WebCore/ComplexTextController.cpp:
Replaced all "controller.totalWidth()" with "controller.totalAdvance().width()".

LayoutTests:

* fast/text/initial-advance-selected-text-expected.html: Added.
* fast/text/initial-advance-selected-text.html: Added.

Canonical link: https://commits.webkit.org/219631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254898 268f45cc-cd09-0410-ab3c-d52691b4dbfc